# funpy

./: .gitignore  README.md  pyproject.toml
funpy/: maybe.py  node.py  stack.py
tests/: test_maybe.py  test_node.py  test_stack.py
