[tool.poetry]
name = "funpy"
version = "0.1.0"
description = ""
authors = ["Alexandra Deas <me@alexandradeas.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pyright = "^1.1.309"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.309"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
